Fixed gap in layout on right side of message in IE9.

--- a/assets/css/application.styl
+++ b/assets/css/application.styl
@@ -1801,7 +1801,9 @@ room-members-sidebar-width = 200px
   overflow auto
 
   position absolute
-  width 100%
+  // Using min-width instead of width to fix IE9 gap on right side of messages.
+  // Don't ask me why.
+  min-width 100%
 
   box-sizing border-box
   border-left 1px solid #B4B4B4
